<resources>
    <string name="app_name">Navigation Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_hindi">Hindi</string>
    <string name="nav_english">English</string>
    <string name="nav_telugu">Telugu</string>
    <string name="nav_marathi">Marathi</string>
    <string name="nav_bengali">Bengali</string>
    <string name="nav_kannada">Kannada</string>
    <string name="nav_malayalam">Malayalam</string>
    <string name="nav_punjabi">Punjabi</string>
    <string name="nav_assamese">Assamese</string>
    <string name="nav_gujarati">Gujarati</string>
    <string name="nav_urdu">Urdu</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Hindi</item>
        <item>English</item>
        <item>Telugu</item>
        <item>Marathi</item>
        <item>Bengali</item>
        <item>Kannada</item>
        <item>Malayalam</item>
        <item>Punjabi</item>
        <item>Assamese</item>
        <item>Gujarati</item>
        <item>Urdu</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="nav_about_us">About Us</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
