<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_hindi"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_hindi" />
        <item
            android:id="@+id/nav_english"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/nav_english" />

        <item
            android:id="@+id/nav_telugu"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_telugu" />

        <item
            android:id="@+id/nav_marathi"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_marathi" />
        <item
            android:id="@+id/nav_bengali"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_bengali" />
        <item
            android:id="@+id/nav_kannada"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_kannada" />
        <item
            android:id="@+id/nav_malayalam"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_malayalam" />
        <item
            android:id="@+id/nav_punjabi"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_punjabi" />
        <item
            android:id="@+id/nav_assamese"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_assamese" />
        <item
            android:id="@+id/nav_gujarati"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_gujarati" />
        <item
            android:id="@+id/nav_urdu"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_urdu" />

    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>
